--- a/portfolio/src/components/Introduction/index.css
+++ b/portfolio/src/components/Introduction/index.css
@@ -12,7 +12,7 @@
 }
 
 .name-container {
-    padding-top: 75px;
+    padding-top: 35px;
 }
 
 .about-me-container {
@@ -27,8 +27,6 @@
 .title {
     font-size: 20px;
 }
-
-.description {}
 
 .spinner{
     height: 300px;
@@ -81,4 +79,12 @@
     height: 150px;
     width: 150px;
     border-radius: 50%;
+}
+
+@media screen and (min-width: 700px) {
+    .description {
+        margin: 0 auto;
+        width: 700px;
+        font-size: 20px;
+    }
 }
