--- a/portfolio/src/components/Projects/index.css
+++ b/portfolio/src/components/Projects/index.css
@@ -34,4 +34,21 @@
 }
 
 
+@media screen and (min-width: 700px) {
+    .cards {
+        margin: 0 auto;
+        width: 700px;
+    }
+    .card {
+        margin: 30px 0;
+    }
+    .card-text {
+        width: 500px;
+    }
+    .project-img {
+        border: solid black 2px;
+        padding: 10px;
+    }
+}
+
 
